create github pages

--- a/smoothie.html
+++ b/smoothie.html
@@ -77,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">how to create a web page for free</a></section><section class="header1 cid-r66cU7tygN mbr-fullscreen mbr-parallax-background" id="header1-1">
+<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="header1 cid-r66cU7tygN mbr-fullscreen mbr-parallax-background" id="header1-1">
 
     
 
@@ -262,7 +262,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N0dfm8YOjDx5Oly1iAkBh03LZ/qcjs+kSccVasex9l6Fnqc2YZcTSsTvsTCAvkqvSVuYiP5cgHWvFY7co2Pwp76hCbR/wueZtF7wE7dkYIUTdl/8/BW8dWAlW8K9NutH" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="thVj/ljJCFHcVq6t7ZUELkwcgN5iI+bBwXsQQHSgjKez00tqyv74fe+SNYUL7sd6xQ5GMA3uulbodJIq+zWAgYs9wMsO67uWMfaSO8TUEAQjS+ch6DSD8yjdj2BAz14H" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" data-form-field="Email" required="" id="email-form3-a">
                         <span class="input-group-btn">
