create github pages

--- a/smoothie.html
+++ b/smoothie.html
@@ -77,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="header1 cid-r66cU7tygN mbr-fullscreen mbr-parallax-background" id="header1-1">
+<section class="engine"><a href="https://mobiri.se/k">develop free website</a></section><section class="header1 cid-r66cU7tygN mbr-fullscreen mbr-parallax-background" id="header1-1">
 
     
 
@@ -129,8 +129,7 @@
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Watermelon Wonder</h2>
                     <div class="mbr-section-text">
-                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dictum dapibus libero. Morbi sed porta nunc, a consequat erat. Praesent convallis egestas tellus, sed imperdiet est gravida quis. 
+                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">watermelon is a delicious and refreshing fruit that's also good for you. It is high in vitamin C, vitamin A and many healthy plant compounds, but contains only 60 calories per smoothie. And because watermelon has a high water content, our Watermelon Wonder smoothie is hydrating and helps you feel full. 
                         </p>
                     </div>
 
@@ -157,7 +156,7 @@
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Apple Delight</h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">
-                        orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dictum dapibus libero. Morbi sed porta nunc, a consequat erat. Praesent convallis egestas tellus, sed imperdiet est gravida quis. 
+                        Apples are an awesome source of fibre and vitamin C. They also contain polyphenols, which can have numerous health benefits.  Apples have been linked to a lower risk of heart disease because they contain soluble fibre of the kind that can help lower your blood cholesterol levels. Studies have also shown that eating apples reduces the risk of type 2 diabetes. 
                         </p>
                     </div>
 
@@ -184,7 +183,7 @@
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">Blueberry Surprise</h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dictum dapibus libero. Morbi sed porta nunc, a consequat erat. Praesent convallis egestas tellus, sed imperdiet est gravida quis. 
+                        Our Blueberry Surprise Smoothie is one of our top sellers. Blueberries are so tasty that many people consider them their favourite fruit. In fact, because they are low in calories and incredibly good for you., blueberries are often labeled a superfood. Blueberries have the highest antioxidant capacity of all the popular fruits and vegetables 
                         </p>
                     </div>
 
@@ -254,15 +253,14 @@
             <div class="title col-12 col-lg-8">
                 <h2 class="align-center pb-2 mbr-fonts-style display-2">
                     Join our Mailing List</h2>
-                <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-5">Join our mailing list for news of our special offers and latest smoothie recipes.
-<div><br></div></h3>
+                <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-5"><div>Keep me up-to-date with your latest healthy smoothie recipes and special offers.'</div></h3>
             </div>
         </div>
 
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="thVj/ljJCFHcVq6t7ZUELkwcgN5iI+bBwXsQQHSgjKez00tqyv74fe+SNYUL7sd6xQ5GMA3uulbodJIq+zWAgYs9wMsO67uWMfaSO8TUEAQjS+ch6DSD8yjdj2BAz14H" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VDW3LJIfZU3YWLzrmJXaNIdj2yJ+3fK6V7UxHZFaVYexS5lr8ZENU7aTS1IW0L7P14dkVYgbxpARLcdVmODsNwi1/5z4cu+RuuYqop6EuCKoHZ9E1qb6oG/fq62dav1+" data-form-field="Email">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" data-form-field="Email" required="" id="email-form3-a">
                         <span class="input-group-btn">
